syntax = "proto2";

import "bcl.proto";
import "peer.proto";
import "subscription.proto";

message PeerDescriptor {
    required Peer peer = 1;

    repeated Subscription subscriptions = 2;

    required bool is_persistent = 3;

    optional bcl.DateTime timestamp_utc = 4;

    optional bool has_debugger_attached = 5;
}
