syntax = "proto2";

import "peer_descriptor.proto";
import "cebus.proto";

message PeerStarted {
    option (message_type) = Event;
    option (namespace) = "Abc.Zebus.Directory";

    required PeerDescriptor peer_descriptor = 1;
}
